sts-gitea.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: gitea
spec:
  serviceName: gitea
  replicas: 1
  selector:
    matchLabels:
      app: gitea
  template:
    metadata:
      labels:
        app: gitea
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: gitea
          image: gitea/gitea:1.26-rootless
          ports:
            - containerPort: 3000
              name: http
            - containerPort: 2222
              name: ssh
          volumeMounts:
            - name: gitea-data
              mountPath: /var/lib/gitea
  volumeClaimTemplates:
    - metadata:
        name: gitea-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 5Gi
