ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitea
spec:
  rules:
    - host: reynier124-kb.my.kube.um.edu.ar
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gitea    
                port:
                  number: 80
